--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <div class="container">
 
         </div>
-        
+        <h1>hello world</h1>
+    </body>
 <!--
         <button id="btn-login">Moralis Metamask Login</button>
-        <button id="btn-logout">Logout</button>
+        <button id="btn-logout">Logout</button> -->
         <script type="text/javascript" src="./main.js"></script>
-    </body>
--->
+ 
 </html>
