--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                    
                   </ul>
                   
-                    <button id="btn-login" class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign in with Metamask</button>
+                    <button id="btn-login" class="btn btn-outline-primary my-2 my-sm-0" type="submit">Sign in with Metamask</button>
                   </form>
                 </div>
               </nav>
